--- a/src/app/componentes/menu/menu.component.scss
+++ b/src/app/componentes/menu/menu.component.scss
@@ -3,7 +3,6 @@
 
 #sidebar {
     background: $primary;
-    // background-image: linear-gradient(45deg, $primary 45%, rgb(250,0,100));
     padding-top: 75px;
     position: fixed;
     top: 0;
@@ -11,34 +10,76 @@
     z-index: 50;
     width: 300px;
     height: 100%;
+    overflow-y: auto;
     transition: .25s;
 
     .item {
-        // background: $lightprimary;
-        border-bottom: 1px solid $lightprimary;
+        border-bottom: 1px solid lighten($primary, 5%);
         
-        a {
-            display: block;
+        div, a {
+            display: flex;
+            align-items: center;
             color: $blanco;
             text-decoration: none;
-            padding: 15px 25px;
-        }
-
-        &.active {
-            background: $lightprimary;
-
-            a {
-                color: $blanco;
-            }
-        }
-
-        &:hover:not(.active) a {
-            animation: meneo 1s;
+            padding: 0 25px;
+            position: relative;
+            height: 50px;
+            cursor: pointer;
         }
 
         &:last-child {
             border-bottom: none;
         }
+
+        .flecha {
+            display: block;
+            position: absolute;
+            top: 50%;
+            right: 25px;
+            transform: translateY(-50%);
+            transition: .25s;
+        }
+
+        .submenu {
+            max-height: 0;
+            overflow: hidden;
+            transition: .25s;
+
+            .item {
+                background: lighten($primary, 5%);
+                border-bottom: 1px solid lighten($primary, 10%);
+
+                a {
+                    padding-left: 50px;
+                }
+
+                &.active {
+        
+                    a {
+                        color: $blanco;
+                    }
+                }
+
+                &:hover:not(.active) a {
+                    animation: meneo 1s;
+                }
+
+                &:last-child {
+                    border-bottom: none;
+                }
+            }
+        }
+    }
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+        padding: 0;
+        margin: 0;
     }
 }
 
