--- a/src/app/componentes/menu/menu.component.scss
+++ b/src/app/componentes/menu/menu.component.scss
@@ -3,7 +3,6 @@
 
 #sidebar {
     background: $primary;
-    padding-top: 75px;
     position: fixed;
     top: 0;
     left: 0;
@@ -12,67 +11,82 @@
     height: 100%;
     overflow-y: auto;
     transition: .25s;
+    
+    .titulo {
+        color: $blanco;
+        font-size: 35px;
+        margin: 75px 25px;
+    }
+
+    a,
+    .texto {
+        display: flex;
+        align-items: center;
+        color: $blanco;
+        text-decoration: none;
+        padding: 0 25px;
+        position: relative;
+        height: 50px;
+        cursor: pointer;
+    }
+
+    .submenu {
+        max-height: 0;
+        overflow: hidden;
+        transition: .25s;
+
+        &.primer-nivel a,
+        &.primer-nivel .texto {
+            padding-left: 50px;
+        }
+
+        &.segundo-nivel a,
+        &.segundo-nivel .texto {
+            padding-left: 75px;
+        }
+    }
 
     .item {
-        border-bottom: 1px solid lighten($primary, 5%);
+        box-shadow: inset 0 1px 0 lighten( $primary, 5% );
 
         &:last-child {
-            border-bottom: none;
-        }
-        
-        div, a {
-            display: flex;
-            align-items: center;
-            color: $blanco;
-            text-decoration: none;
-            padding: 0 25px;
-            position: relative;
-            height: 50px;
-            cursor: pointer;
+            box-shadow: inset 0  1px 0 lighten( $primary, 5% ),
+                        inset 0 -1px 0 lighten( $primary, 5% );
         }
 
-        .submenu {
-            max-height: 0;
-            overflow: hidden;
-            transition: .25s;
+        .submenu.primer-nivel .item {
+            background: lighten($primary, 5%);
+            box-shadow: inset 0 -1px 0 lighten( $primary, 10% );
 
-            .item {
-                background: lighten($primary, 5%);
-                border-bottom: 1px solid lighten($primary, 10%);
+            &:first-child {
+                box-shadow: inset 0  1px 0 lighten( $primary,  5% ),
+                            inset 0 -1px 0 lighten( $primary, 10% );
+            }
 
-                &:last-child {
-                    border-bottom: none;
-                }
+            &:last-child  {
+                box-shadow: inset 0 -1px 0 lighten( $primary, 5% );
+            }
 
-                div, a {
-                    padding-left: 50px;
-                }
+            &:hover:not(.active) a {
+                animation: meneo 1s;
+            }
+        }
 
-                &.active a {
-                    color: $blanco;
-                }
+        .submenu.segundo-nivel .item {
+            background: lighten($primary, 10%);
+            box-shadow: inset 0 -1px 0 lighten( $primary, 15% );
 
-                // &:hover:not(.active) a {
-                //     animation: meneo 1s;
-                // }
+            &:first-child {
+                box-shadow: inset 0  1px 0 lighten( $primary, 10% ),
+                            inset 0 -1px 0 lighten( $primary, 15% );
+            }
 
-                .submenu .item {
+            &:last-child  {
+                box-shadow: inset 0 -1px 0 lighten( $primary, 10% );
+            }
 
-                    background: lighten($primary, 10%);
-                    border-bottom: 1px solid lighten($primary, 15%);
-
-                    &:last-child {
-                        border-bottom: none;
-                    }
-
-                    div, a {
-                        padding-left: 75px;
-                    }
-
-                    // &:hover:not(.active) a {
-                    //     animation: meneo 1s;
-                    // }
-                }
+            &:hover:not(.active) a {
+                animation: meneo 1s;
             }
         }
     }
