[ Gramática ] » Error de redacción corregido

--- a/src/app/componentes/gramatica/gramatica.component.html
+++ b/src/app/componentes/gramatica/gramatica.component.html
@@ -29,7 +29,7 @@
                     <p>I wish you would turn down the music!</p>
                     <p class="error"><u>I</u> wish <u>I</u> would turn down the music!<sup><i class="fa fa-times-circle-o" aria-hidden="true"></i></sup></p>
                 </div>
-                <small>Nótese que el segundo ejemplo está mal, ya no se puede utilizar el mismo sujeto en ambas partes</small>
+                <small>Nótese que el segundo ejemplo está mal, ya que no se puede utilizar el mismo sujeto en ambas partes</small>
 
                 <p>Se utiliza con el <b>pasado perfecto</b> para expresar el deseo de haber hecho las cosas de manera distinta en el pasado (arrepentimiento)</p>
 
