[ Gramática ] » Error de redacción corregido

--- a/src/app/componentes/gramatica/gramatica.component.html
+++ b/src/app/componentes/gramatica/gramatica.component.html
@@ -19,7 +19,7 @@
                 <div class="ejemplos">
                     <p>I wish I was younger</p>
                     <p>He wishes he <u>were</u> rich</p>
-                    <p>He wishes she <u>were</u> travelling on first class</p>
+                    <p>She wishes she <u>were</u> travelling on first class</p>
                 </div>
                 <small>Nótese que hemos utilizado <span>were</span> en lugar de <span>was</span> con <span>he</span> y <span>she</span> para darle un aire más formal</small>
 
