--- a/src/app/componentes/listado/listado.component.html
+++ b/src/app/componentes/listado/listado.component.html
@@ -12,7 +12,7 @@
 
         <!-- Buscador -->
         <div class="entrada buscador">
-            <input #buscador type="text" placeholder="Buscar en este listado" (keyup)="buscar( buscador.value )">
+            <input #buscador type="text" placeholder="Buscar" (keyup)="buscar( buscador.value )">
             <i class="icono fa fa-search" aria-hidden="true"></i>
         </div>
         
@@ -20,27 +20,28 @@
         <small class="recuento">{{ items.length }} ítems</small>
 
         <!-- Tabla -->
-        <ng-container *ngFor="let item of items; let i = index">
-            <div class="elemento">
+        <div class="elementos">
+            <ng-container *ngFor="let item of items; let i = index">
+                <div class="elemento">
 
-                <!-- Ítem en inglés -->
-                <div class="ingles">{{ item.ingles }}</div>
+                    <!-- Ítem en inglés -->
+                    <div class="ingles">{{ item.ingles }}</div>
 
-                <!-- Ítem en español -->
-                <div class="castellano">{{ item.castellano }}</div>
+                    <!-- Ítem en español -->
+                    <div class="castellano">{{ item.castellano }}</div>
 
-                <!-- Botones para editar y eliminar -->
-                <div class="opciones">
-                    <a class="opcion editar" (click)="editar(item, categoria)">
-                        <i class="icono fa fa-pencil" aria-hidden="true"></i>
-                    </a>
-                    <a class="opcion borrar" (click)="eliminar( item, i )">
-                        <i class="icono fa fa-trash" aria-hidden="true"></i>
-                    </a>
+                    <!-- Botones para editar y eliminar -->
+                    <div class="opciones">
+                        <a class="opcion editar" (click)="editar(item, categoria)">
+                            <i class="icono fa fa-pencil" aria-hidden="true"></i>
+                        </a>
+                        <a class="opcion borrar" (click)="eliminar( item, i )">
+                            <i class="icono fa fa-trash" aria-hidden="true"></i>
+                        </a>
+                    </div>
                 </div>
-
-            </div>
-        </ng-container>
+            </ng-container>
+        </div>
     </ng-container>
 
     <!-- Notificación que se muestra cuando no existe ningún ítem -->
