[ Menú de navegación ] » Añadir la categoría 'Todos' en vocabulario completado

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -73,6 +73,9 @@
                     <li class="item" routerLinkActive="active">
                         <a [routerLink]="['listado', 'expresiones']">Expresiones</a>
                     </li>
+                    <li class="item" routerLinkActive="active">
+                        <a [routerLink]="['listado', 'todo']">Todo</a>
+                    </li>
                 </ul>
 
             </li>
