[ Login ] » Añadir título completado. Añadir overlay completado

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,4 +1,7 @@
 <div id="login" class="animated fadeIn">
+    
+    <h1 class="titulo">Diccionario</h1>
+    
     <form class="formulario-login" #formularioLogin="ngForm" (ngSubmit)="onSubmit( formularioLogin )">
 
         <!-- Email -->
@@ -26,4 +29,5 @@
             <label>Recordar usuario</label>
         </div>
     </form>
+    <div class="overlay"></div>
 </div>
