--- a/src/app/componentes/gramatica/gramatica.component.html
+++ b/src/app/componentes/gramatica/gramatica.component.html
@@ -1,4 +1,4 @@
-<div id="gramatica" class="animated fadeIn" style="margin: 50px 0">
+<div id="gramatica" class="animated fadeIn">
 
     <h1>{{ titulo }}</h1>
     <hr>
