--- a/src/app/componentes/login/login.component.scss
+++ b/src/app/componentes/login/login.component.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: url('~src/assets/img/uk1.jpg') fixed no-repeat center;
+    background: url('~src/assets/img/uk1.jpg') no-repeat center;
     background-size: cover;
     min-height: 100vh;
 
@@ -71,7 +71,7 @@
         color: rgba(255,255,255,.7);
         font-size: 18px;
         background: $rosa;
-        background-image: linear-gradient(180deg, transparent 50%, rgba(0,0,0,.075) 50%);
+        // background-image: linear-gradient(180deg, transparent 50%, rgba(0,0,0,.075) 50%);
         border: none;
         border-radius: 2px;;
         box-shadow: none;
@@ -99,7 +99,7 @@
         
         &:hover {
             background: $mostaza;
-            background-image: linear-gradient(180deg, transparent 50%, rgba(0,0,0,.075) 50%);
+            // background-image: linear-gradient(180deg, transparent 50%, rgba(0,0,0,.075) 50%);
             
             .icono:first-child {
                 animation: mover1 .5s .25s forwards;
