[ Listado ] » Eliminar estilos en línea completado. Actualizar el recuento de ítems cuando se utiliza el buscador completado

--- a/src/app/componentes/listado/listado.component.html
+++ b/src/app/componentes/listado/listado.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn" style="margin: 75px 0">
+<div class="animated fadeIn">
 
     <h1>Listado de {{ categoria }}</h1>
     <hr>
@@ -17,7 +17,7 @@
         </div>
         
         <!-- Recuento -->
-        <small class="recuento">{{ items.length }} ítems</small>
+        <small class="recuento">{{ recuento }} ítems</small>
 
         <!-- Tabla -->
         <div class="elementos">
